vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/SDO_Analytics_AIAgentInteractionStep_v2__c.object-meta.xml
<CustomObject>
    <label>AIAgentInteractionStep</label>
    <nameField>
        <label>AIAgentInteractionStep</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentInteractionSteps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>