vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/AI_Agent_Interaction__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Interaction__c</fullName>
    <label>AI Agent Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>