vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>