vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>