vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Gen_AI_Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>Gen_AI_Gateway_Response__c</fullName>
    <label>Gen AI Gateway Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>