vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Input_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Value__c</fullName>
    <label>Input Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>