vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Output_Value__c.field-meta.xml
<CustomField>
    <fullName>Output_Value__c</fullName>
    <label>Output Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>