vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Post_step_Variable__c.field-meta.xml
<CustomField>
    <fullName>Post_step_Variable__c</fullName>
    <label>Post-step Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>