vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Pre_step_Variable__c.field-meta.xml
<CustomField>
    <fullName>Pre_step_Variable__c</fullName>
    <label>Pre-step Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>