vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Previous_Step__c.field-meta.xml
<CustomField>
    <fullName>Previous_Step__c</fullName>
    <label>Previous Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>