vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/fields/Telemetry_Trace_Span_Id__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Trace_Span_Id__c</fullName>
    <label>Telemetry Trace Span Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>