vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AIAgentInteractionStep_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AI_Agent_Interaction__c</columns>
    <columns>Ai_Agent_Interaction_Step_Type__c</columns>
    <columns>Attribute__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Gen_AI_Gateway_Request__c</columns>
    <columns>Gen_AI_Gateway_Response__c</columns>
    <columns>Generation__c</columns>
    <columns>Input_Value__c</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>